apps/media/sonarr/networkpolicies/ingress-sonarr.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-sonarr
  namespace: media
spec:
  selector: app == 'sonarr'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: projectcalico.org/name == 'traefik'
        selector: app.kubernetes.io/instance == 'traefik'
      destination:
        ports:
          - 8989
