apps/media/sonarr/networkpolicies/nginx-egress-sonarr.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nginx-egress-sonarr
  namespace: ingress-nginx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/name: ingress-nginx
  egress:
    - toServices:
        - k8sService:
            serviceName: sonarr
            namespace: media
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
