apps/media/sonarr/networkpolicies/prometheus-egress-sonarr.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-egress-sonarr
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kube-prometheus-stack-prometheus
      app.kubernetes.io/name: prometheus
  egress:
    - toServices:
        - k8sService:
            serviceName: sonarr
            namespace: monitoring
      toPorts:
        - ports:
            - port: "9794"
              protocol: TCP
