apps/media/sonarr/networkpolicies/sonarr.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sonarr
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app: sonarr
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/component: controller
            app.kubernetes.io/instance: ingress-nginx
            "k8s:io.kubernetes.pod.namespace": ingress-nginx
        - matchLabels:
            app: prowlarr
            "k8s:io.kubernetes.pod.namespace": media
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: artworks.thetvdb.com
        - matchName: ghcr.io # catppuccin theme
        - matchName: hooks.slack.com
        - matchName: pkg-containers.githubusercontent.com # catppucin theme
        - matchName: plex.tv
        - matchName: raw.githubusercontent.com # catppuccin theme
        - matchName: thexem.info
        - matchPattern: "*.sonarr.tv"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
          rules:
            http: [{}]
    - toFQDNs:
        - matchName: thexem.info
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
          rules:
            http: [{}]
    - toEndpoints:
        - matchLabels:
            app: prowlarr
            "k8s:io.kubernetes.pod.namespace": media
      toPorts:
        - ports:
            - port: "9696"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: plex
            "k8s:io.kubernetes.pod.namespace": media
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: sabnzbd
            "k8s:io.kubernetes.pod.namespace": media
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
