apps/media/sonarr/networkpolicies/traefik-egress-sonarr.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: traefik-egress-sonarr
  namespace: traefik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: traefik-traefik
  egress:
    - toEndpoints:
        - matchLabels:
            app: sonarr
            io.kubernetes.pod.namespace: media
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
